--- a/master.css
+++ b/master.css
@@ -1,20 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Courgette|Raleway:900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Kanit:100i|Courgette|Rubik|Raleway:900&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    margin: 4em;
-    padding: 2em;
-    background-color: #fdfdff;
+    margin: 2em 4em;
+    padding: 2em 4em;
+    background-color:white;
     margin: 0;
     padding: 0;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Rubik", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 }
-div {
-    border-radius: 0.5em;
+.wrapper {
+  margin: 1em;
+  padding: 2em 6.5em;
 }
 
 a:link, a:visited {
@@ -27,10 +28,43 @@ a:link, a:visited {
         width: auto;
     }
 }
+
+.bgPic {
+  max-height: 350px;
+  position: relative;
+  height: 350px;
+  overflow: hidden;
+  margin-bottom: 2em;
+}
+
+.bgPic img {
+  background-size: contain;
+  width: 100%;
+}
   
   h1{
     font-family: 'Raleway', sans-serif;
-    color: #8a009a;
+    color: #E8D000;
+  }
+
+  h1, h2 {
+    margin: 0;
+    padding: 0;
+  }
+
+  .logoName {
+    display: inline-block;
+    position: relative;
+    top: -35px;
+    padding-bottom: 5px;
+  }
+
+  .slogan {
+    color: white;
+    font-size: 36px;
+    position: absolute;
+    padding: 3.5em 3.4em;
+    width: 550px;
   }
   
   #connectLogo, #withLogo {
@@ -41,29 +75,40 @@ a:link, a:visited {
   }
   
   h2{
-    font-family: 'Courgette', cursive;
-    color:#efaa05;
+    font-family: 'Kanit', sans-serif;
+    color:#C740D7;
     display:inline;
   }
+
   #locationForm , #professionForm {
     text-align: center;
   }
   p{
-    text-align: center;
-    font-family: "Helvetica";
+    font-family: "Rubik", sans-serif;
     color: #000000;
   }
-  #logo {
-    text-align: center;
-  }
+ 
   #link {
    color:  white;
   }
+
+  #logo {
+    position: absolute;
+    padding: 1em;
+  }
+
+  #logo img {
+    width: 100px;
+    height: auto;
+    display: inline-block;
+  }
+
   #buttonDivide {
     text-align: center;
   }
+
   button {
-    background-color: #efaa05;
+    background-color: #C740D7;;
     border: none;
     border-radius: 4px;
     color: white;
@@ -72,5 +117,4 @@ a:link, a:visited {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    align: center;
   }
