--- a/master.css
+++ b/master.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Kanit:100i|Courgette|Rubik|Raleway:900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fascinate+Inline|Kanit:100i|Courgette|Rubik|Raleway:900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -15,7 +15,7 @@ body {
 }
 .wrapper {
   margin: 1em;
-  padding: 2em 6.5em;
+  padding: 1em 6.5em;
 }
 
 a:link, a:visited {
@@ -64,6 +64,7 @@ a:link, a:visited {
     font-size: 36px;
     position: absolute;
     padding: 3.5em 3.4em;
+    letter-spacing: 1px;
     width: 550px;
   }
   
@@ -86,6 +87,7 @@ a:link, a:visited {
   p{
     font-family: "Rubik", sans-serif;
     color: #000000;
+    font-size: 1.1em;
   }
  
   #link {
@@ -112,9 +114,24 @@ a:link, a:visited {
     border: none;
     border-radius: 4px;
     color: white;
-    padding: 20px 64px;
+    padding: 14px 64px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
   }
+
+  .quickPitch {
+    line-height: 1.5;
+    font-size: 23px;
+    width: 65%;
+    font-weight: bold;
+  }
+
+  input#occupation {
+    height: 45px;
+    margin-right: 15px;
+    width: 450px;
+    box-shadow: 1px 1px 2px #f5f5f5;
+    border-radius: 5px;
+}
