--- a/master.css
+++ b/master.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Rubik", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding-bottom: 2em;
 
 }
 .wrapper {
@@ -35,13 +36,19 @@ body {
   padding-left: 5em;
   margin-top:0.2em;
   margin-bottom:0em;
-
-
-
 }
+
 .results-box{
-  color:red;
+  padding-top: 1em;
+  color:black;
 }
+
+.resultsTitle {
+  letter-spacing: 1px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
 a:link, a:visited {
     color: #38488f;
     text-decoration: none;
@@ -160,4 +167,9 @@ a:link, a:visited {
     width: 450px;
     box-shadow: 1px 1px 2px #f5f5f5;
     border-radius: 5px;
+}
+
+#searchRes {
+  padding: 1em 0;
+  color: black;
 }
