--- a/master.css
+++ b/master.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Rubik", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding-bottom: 2em;
+    padding-bottom: 0;
 
 }
 .wrapper {
@@ -172,4 +172,14 @@ a:link, a:visited {
 #searchRes {
   padding: 1em 0;
   color: black;
+}
+
+footer {
+  height: 70px;
+  background: black;
+  color: white;
+  text-align: center;
+  bottom: 0;
+  font-size: 12px;
+  line-height: 70px;
 }
