--- a/master.css
+++ b/master.css
@@ -1,56 +1,68 @@
-@font-face {
-  @font-family:"Helvetica";
-  src: url("/test1/helvetica-neue-bold.ttf") format: ("ttf");
-}
 
-@font-face {
-  @font-family: "Intro";
-  src: url("/test1/intro.otf") format ("otf");
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+.flex-box {
+  width:100%;
+  height:100%;
+  display: flex;
+  color: red;
+  flex-direction: column;
 }
-
-@font-face {
-  @font-family: "Gist";
-  src: url("/test1/GistLite.otf") format=("otf");
+.row1{
+  flex: 1 1 50%;
+  display: flex;
+  width:100%;
 }
-
-h1{
-  font-family: "Intro";
-  color: #8a009a;
-}
-
-#connectLogo, #withLogo {
-  display: inline-block;
-  float: none;
-  position: relative;
-  font-size: 300%;
-}
-
-h2{
-  font-family: "Gist";
-  color:#efaa05;
-  display:inline;
-}
-#locationForm , #professionForm {
+.row1 > * {
+  flex: 0 0 30%;
+  background-color: #c741d7;
+  flex-direction: row;
+  margin: auto;
   text-align: center;
+  height: 25em;
 }
-p{
+
+.row2 {
+  display:flex; /*was block before*/
+  flex: 0 1 60%;
+  background-color: #c741d7;
+  width: 100%;
+  margin:auto;
+  height: 20em;
+  margin-top: 2em;
+  flex-direction:row;
+  color: white;
+  justify-content:flex-end;
+}
+#column2 {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 60%;
+  width: 90%;
+  background-color:#c741d7;
+  margin: auto;
+}
+#column1{
+  flex: 1 1 1000%
+}
+
+#box1text,#box2text, #box3text  {
+  font-family: "Rubik",sans-serif;
+  letter-spacing: 1px;
   text-align: center;
-  font-family: "Helvetica";
-  color: #000000;
+  color: white;
 }
-#logo {
+#icon1, #icon2, #icon3
+{
+  color: white;
   text-align: center;
+  font-size: 9em;
 }
-#link {
- color:  white;
-}
-#buttonDivide {
-  text-align: center;
-}
+
 button {
   background-color: #efaa05;
-  border: none;
-  border-radius: 4px;
+  border: 2px;
+  border-color: white;
+  border-radius: none;
   color: white;
   padding: 20px 64px;
   text-align: center;
@@ -58,4 +70,5 @@ button {
   display: inline-block;
   font-size: 16px;
   align: center;
+  font-family: "Rubik",sans-serif;
 }
