--- a/master.css
+++ b/master.css
@@ -23,9 +23,8 @@ body {
   font-weight: 600;
   color: black;
   font-size:1.5em;
-  padding-left: 3.5em;
+  padding-left: 3.7em;
   padding-top: 1.0em;
-  margin-bottom: .5em;
   border-top: 1px solid silver;
 
 }
@@ -41,12 +40,14 @@ body {
 .results-box{
   padding-top: 1em;
   color:black;
+  display: block;
 }
 
 .resultsTitle {
   letter-spacing: 1px;
   font-size: 1.2em;
   font-weight: bold;
+  margin-bottom: -1.5rem;
 }
 
 a:link, a:visited {
@@ -94,11 +95,11 @@ a:link, a:visited {
 
   .slogan {
     color: white;
-    font-size: 36px;
+    font-size: 15px;
     position: absolute;
-    padding: 3.5em 3.4em;
-    letter-spacing: 1px;
-    width: 550px;
+    padding: 6em 0 0 8.3em;
+    /* letter-spacing: 1px; */
+    width: 610px;
   }
 
   #connectLogo, #withLogo {
@@ -167,6 +168,7 @@ a:link, a:visited {
     width: 450px;
     box-shadow: 1px 1px 2px #f5f5f5;
     border-radius: 5px;
+    padding: 0 1em;
 }
 
 #searchRes {
@@ -182,4 +184,124 @@ footer {
   bottom: 0;
   font-size: 12px;
   line-height: 70px;
+}
+
+i.fa.fa-envelope-o {
+  font-size: 2em;
+  top: 2em;
+  color: #c740d7;
+  position: relative;
+  cursor: pointer;
+}
+
+.flex-box {
+  width:100%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+}
+.row1{
+  flex: 1 1 50%;
+  display: flex;
+  width:100%;
+}
+.row1 > * {
+  flex: 0 0 32%;
+  background-color: #E8D000;;
+  color: black;
+  flex-direction: row;
+  margin: auto;
+  text-align: center;
+  height: 20em;
+  border-radius: 5px;
+  
+
+}
+
+.row2 {
+  display:flex; /*was block before*/
+  flex: 0 1 60%;
+  background-color: inherit;
+  width: 99%;
+  margin:auto;
+  height: 30em;
+  margin-top: 2em;
+  flex-direction:row;
+  color: black;
+  justify-content:flex-end;
+}
+#column2 {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 60%;
+  width: 90%;
+  background-color:#c741d7;
+  margin: auto;
+}
+
+#column1{
+  flex: 1 1 100%;
+}
+
+#box1text,#box2text, #box3text  {
+  font-family: "Rubik",sans-serif;
+  letter-spacing: 1px;
+  text-align: center;
+  font-size: 18px;
+  padding: 1em;
+  margin-top: 10%;
+  cursor: pointer;
+}
+
+.boxMenu:hover {
+  background: #c741d7;
+  color: white;
+  cursor: pointer;
+}
+
+.boxMenu > * {
+  color: black;
+}
+
+#box1text, #box2text {
+  margin-right: 1em;
+}
+
+#icon1, #icon2, #icon3
+{
+  text-align: center;
+  font-size: 5em;
+}
+
+textarea {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: inherit;
+  min-height: 253px;
+  bottom: 0;
+  margin-bottom: 0;
+  padding: 10px;
+  font-family: 'Rubik', sans-serif;
+  margin-top: 0px;
+  font-size: 14px;
+  border: 2px solid #E8D000;
+  border-radius: 5px;
+}
+
+.msgAddon {
+  border: 2px;
+  border-color: white;
+  border-radius: none;
+  color: white;
+  padding: 3.7vh 64px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: "Rubik",sans-serif;
+  width: 100%;
+  border-top: 2px solid #E8D000;
+  cursor: pointer;
 }
